Modified/Src/MCCToolChestPE_exe/MCPELevelDBI/LevelDBInterop.cs


	[DllImport("LevelDB-MCPE-64.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_value")]
	public static extern IntPtr leveldb_64_iter_value(IntPtr iterator, out int length);

	[DllImport("LevelDB-MCPE-64.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_get_error")]
	public static extern void leveldb_64_iter_get_error(IntPtr iterator, out IntPtr error);

	[DllImport("LevelDB-MCPE-64.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "leveldb_compact_range")]
	public static extern IntPtr leveldb_64_compact_range(IntPtr db, byte[] start_key, IntPtr start_key_len, byte[] limit_key, IntPtr limit_key_len);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "leveldb_options_create")]
	public static extern IntPtr leveldb_32_options_create();

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_options_destroy")]
	public static extern void leveldb_32_options_destroy(IntPtr options);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_options_set_create_if_missing")]
	public static extern void leveldb_32_options_set_create_if_missing(IntPtr options, byte o);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "leveldb_options_set_compression")]
	public static extern void leveldb_32_options_set_compression(IntPtr options, int compressionType);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "leveldb_readoptions_create")]
	public static extern IntPtr leveldb_32_readoptions_create();

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_readoptions_destroy")]
	public static extern void leveldb_32_readoptions_destroy(IntPtr options);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_readoptions_set_fill_cache")]
	public static extern void leveldb_32_readoptions_set_fill_cache(IntPtr options, byte o);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_writeoptions_create")]
	public static extern IntPtr leveldb_32_writeoptions_create();

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_writeoptions_destroy")]
	public static extern void leveldb_32_writeoptions_destroy(IntPtr options);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_writeoptions_set_sync")]
	private static extern void luZSMGCOONE(IntPtr P_0, byte P_1);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_open")]
	public static extern IntPtr leveldb_32_open(IntPtr options, string name, out IntPtr error);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_close")]
	public static extern void leveldb_32_close(IntPtr db);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_get")]
	public static extern IntPtr leveldb_32_get(IntPtr db, IntPtr options, byte[] key, IntPtr keylen, out IntPtr vallen, out IntPtr errptr);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "leveldb_get")]
	public static extern IntPtr leveldb_32_get(IntPtr db, IntPtr options, ref int key, IntPtr keylen, out IntPtr vallen, out IntPtr errptr);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "leveldb_get")]
	public static extern IntPtr leveldb_32_get(IntPtr db, IntPtr options, IntPtr key, IntPtr keylen, out IntPtr vallen, out IntPtr errptr);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_put")]
	public static extern void leveldb_32_put(IntPtr db, IntPtr options, byte[] key, IntPtr keylen, byte[] val, IntPtr vallen, out IntPtr errptr);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_put")]
	public static extern void leveldb_32_put(IntPtr db, IntPtr options, ref int key, IntPtr keylen, int[] val, IntPtr vallen, out IntPtr errptr);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_delete")]
	public static extern void leveldb_32_delete(IntPtr db, IntPtr options, byte[] key, IntPtr keylen, out IntPtr errptr);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_free")]
	public static extern void leveldb_32_free(IntPtr ptr);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_create_iterator")]
	public static extern IntPtr leveldb_32_create_iterator(IntPtr db, IntPtr options);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_destroy")]
	public static extern void leveldb_32_iter_destroy(IntPtr iterator);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_valid")]
	public static extern byte leveldb_32_iter_valid(IntPtr iterator);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_seek_to_first")]
	public static extern void leveldb_32_iter_seek_to_first(IntPtr iterator);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_seek_to_last")]
	public static extern void leveldb_32_iter_seek_to_last(IntPtr iterator);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_seek")]
	public static extern void leveldb_32_iter_seek(IntPtr iterator, byte[] key, int length);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_seek")]
	public static extern void leveldb_32_iter_seek(IntPtr iterator, ref int key, int length);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_next")]
	public static extern void leveldb_32_iter_next(IntPtr iterator);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_prev")]
	public static extern void leveldb_32_iter_prev(IntPtr iterator);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_key")]
	public static extern IntPtr leveldb_32_iter_key(IntPtr iterator, out int length);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_value")]
	public static extern IntPtr leveldb_32_iter_value(IntPtr iterator, out int length);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, EntryPoint = "leveldb_iter_get_error")]
	public static extern void leveldb_32_iter_get_error(IntPtr iterator, out IntPtr error);

	[DllImport("LevelDB-MCPE-32.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "leveldb_compact_range")]
	public static extern IntPtr leveldb_32_compact_range(IntPtr db, byte[] start_key, IntPtr start_key_len, byte[] limit_key, IntPtr limit_key_len);

	[MethodImpl(MethodImplOptions.NoInlining)]
	public LevelDBInterop()
	{
		while (false)
		{
			_ = ((object[])null)[0];
		}
		Hm96YcXHNOTbKhIs4rg.TtVGNoKztHEBW();
	}
}
